--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>随机九九乘法表生成器</title>
+<title>九九乘法挑战小达人</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -99,7 +99,7 @@
 </style>
 </head>
 <body>
-    <h1>随机九九乘法表生成器</h1>
+    <h1>九九乘法挑战小达人</h1>
     <div class="question" id="question"></div>
     <button onclick="openModal()" class="start_button">开始挑战</button>
 
