--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
 
             // 构建题目字符串
             let question = `${num1} × ${num2} = ?`;
-
+            if (num1 > num2) {
+                question = `${num2} × ${num1} = ?`;
+            }
             return question;
         }
 
